--- a/main/res/layout/activity_count.xml
+++ b/main/res/layout/activity_count.xml
@@ -1,111 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_count"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="#427CAC"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    </android.support.design.widget.AppBarLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/previous_bin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|start"
+            android:background="#427CAC"
+            app:backgroundTint="#427CAC"
+            android:layout_margin="16dp"
+            android:src="@drawable/nav_prev"/>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/next_bin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#427CAC"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            app:backgroundTint="#427CAC"
+            android:src="@drawable/nav_right"/>
+
     <LinearLayout
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <android.support.v7.widget.CardView
             android:layout_margin="10dp"
-            android:background="#1000"
-            android:orientation="vertical">
-
+            android:padding="10dp"
+            app:cardCornerRadius="10dp"
+            android:background="#3000"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            tools:targetApi="lollipop"
+            android:backgroundTint="#3000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <LinearLayout
+                android:padding="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/header_bin"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="7"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <Switch
-                    android:id="@+id/bin_empty"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2.3"
-                    android:text="Empty" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp">
-
-                <TextView
-                    android:id="@+id/header_wo"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="start"
-                    android:text="Warehouse Order: "
-                    android:textColor="@color/black" />
-            </LinearLayout>
+                    android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp">
+                    <TextView
+                        android:id="@+id/header_bin"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="7"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/item_position"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textColor="@color/grey" />
+                    <Switch
+                        android:id="@+id/bin_empty"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2.3"
+                        android:text="Empty" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="5dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Warehouse Order: "
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                    <TextView
+                        android:id="@+id/header_wo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingLeft="10dp"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:gravity="left"
+                        android:text="Progress"
+                        android:layout_height="match_parent" />
+
+                    <TextView
+                        android:id="@+id/item_position"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:textColor="@color/grey" />
+                </LinearLayout>
 
                 <ProgressBar
+                    android:paddingTop="5dp"
                     android:id="@+id/bar"
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:layout_width="0dp"
+                    style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="3"
-                    android:max="100" />
-            </LinearLayout>
+                    android:max="100"
+                    android:progress="20" />
 
-        </LinearLayout>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
 
         <ListView
+
             android:id="@+id/bin_list"
             android:layout_width="match_parent"
             android:layout_height="450dp"
             android:layout_margin="10dp" />
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:paddingBottom="20dp"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
-            android:layout_height="wrap_content">
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/previous_bin"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:fabSize="mini"
-                android:background="@color/white"
-                app:backgroundTint="@color/white"
-                android:src="@drawable/nav_prev"/>
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/next_bin"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:fabSize="mini"
-                android:background="@color/white"
-                app:backgroundTint="@color/white"
-                android:src="@drawable/nav_right"/>
-        </RelativeLayout>
     </LinearLayout>
+
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
