--- a/main/res/layout/server_dropdownlist.xml
+++ b/main/res/layout/server_dropdownlist.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
+        android:background="#4000"
         android:id="@+id/server_dropdown_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
