--- a/main/res/layout/server_list_item.xml
+++ b/main/res/layout/server_list_item.xml
@@ -5,6 +5,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:textColor="@color/white"
+        android:padding="5dip"
         />
 </layout>
