--- a/main/res/layout/wolist_item.xml
+++ b/main/res/layout/wolist_item.xml
@@ -6,14 +6,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/holo_red_light"
             android:id="@+id/bin_number"
-            android:padding="10dp"
-            android:textSize="40sp"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:textSize="@dimen/list_view_text_size"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Storage Bin "/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </layout>
