--- a/main/res/layout/count_item.xml
+++ b/main/res/layout/count_item.xml
@@ -36,51 +36,12 @@
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
-                <!--<LinearLayout-->
-                <!--android:paddingTop="5dp"-->
-                <!--android:paddingBottom="5dp"-->
-                <!--android:id="@+id/countItemLine1"-->
-                <!--android:orientation="horizontal"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height = "wrap_content">-->
-                <!--<TextView-->
-                <!--android:textColor="@color/white"-->
-                <!--android:text="Handling Unit:"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent" />-->
-                <!--<TextView-->
-                <!--android:textColor="@color/white"-->
-                <!--android:id="@+id/hu"-->
-                <!--android:paddingLeft="10dp"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"/>-->
-                <!--</LinearLayout>-->
-                <!--<RadioGroup
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <RadioButton android:id="@+id/hu_empty"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/white"
-                        android:paddingLeft="15dp"
-                        android:textColor="@color/white"
-                        android:text="HU Empty"/>
-                    <RadioButton android:id="@+id/hu_missing"
-                        android:paddingLeft="15dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/white"
-                        android:textColor="@color/white"
-                        android:text="HU Missing"/>
-                </RadioGroup>-->
                 <LinearLayout
                     android:id="@+id/product_id_sec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:visibility="gone"
                     android:paddingTop="7dp">
 
                     <TextView
@@ -152,6 +113,7 @@
 
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:id="@+id/change_quantity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -195,23 +157,29 @@
                         app:fabSize="mini" />
 
                     <ImageView
-                        android:layout_marginLeft="60dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:id="@+id/uom_prev"
+                        android:layout_marginLeft="45dp"
                         android:src="@drawable/uom_prev"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent" />
 
                     <TextView
                         android:id="@+id/uom"
-                        android:textStyle="bold"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_width="wrap_content"
+                        android:layout_width="35dp"
                         android:layout_height="match_parent"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginRight="12dp"
                         android:gravity="center_vertical"
                         android:textColor="@color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <ImageView
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:id="@+id/uom_next"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:src="@drawable/uom_next" />
