--- a/main/res/layout/initial_logon.xml
+++ b/main/res/layout/initial_logon.xml
@@ -10,136 +10,144 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ScrollView
-                android:id="@+id/login_form"
-                android:background="@drawable/bg_log"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <LinearLayout
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:orientation="vertical"
+                <RelativeLayout
+                    android:id="@+id/login_form"
+                    android:background="@drawable/bg_log"
                     android:layout_width="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
                     <LinearLayout
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp">
-                        <TextView
-                            android:textSize="35sp"
-                            android:textColor="@color/white"
-                            android:layout_gravity="center"
-                            android:text="Physical Inventory"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:background="@drawable/user_pass"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <ImageView
-                            android:src="@drawable/user"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
-                            android:layout_gravity="bottom"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="match_parent" />
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="0dp"
-                            android:layout_weight="6"
-                            android:layout_height="match_parent">
-                            <EditText
-                                android:textColor="@color/white"
-                                android:id="@+id/username"
-                                android:hint="User"
-                                android:textColorHint="@color/white"
-                                android:inputType="text"
-                                android:maxLines="1"
-                                android:singleLine="true"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
                         android:layout_marginTop="10dp"
-                        android:orientation="horizontal"
-                        android:background="@drawable/user_pass"
-                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-                        <ImageView
-                            android:src="@drawable/pass"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
-                            android:layout_gravity="bottom"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="match_parent" />
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="0dp"
-                            android:layout_weight="6"
-                            android:layout_height="match_parent">
-                            <EditText
-                                android:id="@+id/password"
+                        <LinearLayout
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="250dp">
+                            <TextView
+                                android:textSize="35sp"
                                 android:textColor="@color/white"
-                                android:hint="Password"
-                                android:textColorHint="@color/white"
-                                android:inputType="textPassword"
-                                android:imeOptions="actionUnspecified"
-                                android:maxLines="1"
-                                android:singleLine="true"
-                                android:layout_width="match_parent"
+                                android:layout_gravity="center"
+                                android:text="Physical Inventory"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content" />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/user_pass"
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:textColor="@color/white"
-                            android:padding="10dp"
-                            android:text="Server: "
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:textSize="20sp"
-                            android:layout_height="wrap_content" />
-                        <Spinner
-                            android:id="@+id/server_list"
-                            android:layout_gravity="center"
-                            android:layout_width="0dp"
-                            android:layout_weight="2"
+                        </LinearLayout>
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:background="@drawable/user_pass"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content">
-                        </Spinner>
+                            <ImageView
+                                android:src="@drawable/user"
+                                android:paddingLeft="5dp"
+                                android:paddingRight="5dp"
+                                android:layout_gravity="bottom"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:layout_height="match_parent" />
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="0dp"
+                                android:layout_weight="6"
+                                android:layout_height="match_parent">
+                                <EditText
+                                    android:textColor="@color/white"
+                                    android:id="@+id/username"
+                                    android:hint="User"
+                                    android:textColorHint="@color/white"
+                                    android:inputType="text"
+                                    android:maxLines="1"
+                                    android:singleLine="true"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content" />
+                            </android.support.design.widget.TextInputLayout>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_marginTop="10dp"
+                            android:orientation="horizontal"
+                            android:background="@drawable/user_pass"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:src="@drawable/pass"
+                                android:paddingLeft="5dp"
+                                android:paddingRight="5dp"
+                                android:layout_gravity="bottom"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:layout_height="match_parent" />
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="0dp"
+                                android:layout_weight="6"
+                                android:layout_height="match_parent">
+                                <EditText
+                                    android:id="@+id/password"
+                                    android:textColor="@color/white"
+                                    android:hint="Password"
+                                    android:textColorHint="@color/white"
+                                    android:inputType="textPassword"
+                                    android:imeOptions="actionUnspecified"
+                                    android:maxLines="1"
+                                    android:singleLine="true"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content" />
+                            </android.support.design.widget.TextInputLayout>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/user_pass"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:textColor="@color/white"
+                                android:padding="10dp"
+                                android:text="Server: "
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:textSize="20sp"
+                                android:layout_height="wrap_content" />
+                            <Spinner
+                                android:id="@+id/server_list"
+                                android:layout_gravity="center"
+                                android:layout_width="0dp"
+                                android:layout_weight="2"
+                                android:layout_height="wrap_content">
+                            </Spinner>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <Button
+                            android:id="@+id/email_sign_in_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="20dp"
+                            android:layout_marginLeft="@dimen/button_margin_horizontal"
+                            android:layout_marginRight="@dimen/button_margin_horizontal"
+                            android:background="@drawable/logon_btn"
+                            android:text="Logon"
+                            android:textAllCaps="false"
+                            android:textColor="@color/white" />
+                        <Button
+                            android:layout_marginLeft="@dimen/button_margin_horizontal"
+                            android:layout_marginRight="@dimen/button_margin_horizontal"
+                            android:id="@+id/register_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/get_user_btn"
+                            android:text="Get User"
+                            android:textAllCaps="false"
+                            android:textColor="#427CAC" />
                     </LinearLayout>
 
-                    <Button
-                        android:id="@+id/email_sign_in_button"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="50dp"
-                        android:background="@drawable/logon_btn"
-                        android:text="Logon"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white" />
-
-                    <Button
-                        android:id="@+id/register_button"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:background="@drawable/get_user_btn"
-                        android:text="Get User"
-                        android:textAllCaps="false"
-                        android:textColor="#427CAC" />
-                </LinearLayout>
-            </ScrollView>
+                </RelativeLayout>
 
         </RelativeLayout>
 
