--- a/main/res/layout/pidoclist_item.xml
+++ b/main/res/layout/pidoclist_item.xml
@@ -30,7 +30,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/nav_right"
+            android:src="@drawable/uom_next"
             android:layout_gravity="center"
             android:layout_marginRight="10dp"/>
 
