--- a/main/res/values/dimens.xml
+++ b/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="button_text_size">18sp</dimen>
     <dimen name="list_view_text_size">35sp</dimen>
+    <dimen name="button_margin_horizontal">20dp</dimen>
 </resources>
