--- a/main/res/drawable/logon_btn.xml
+++ b/main/res/drawable/logon_btn.xml
@@ -4,7 +4,7 @@
         android:shape="rectangle">
     <!-- 填充的颜色 -->
     <solid
-        android:color="#427CAC" />
+        android:color="#0070B1" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径也就是弧形的弧度 -->
     <corners android:radius="15dip" />
