--- a/main/res/layout/activity_count.xml
+++ b/main/res/layout/activity_count.xml
@@ -10,11 +10,12 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_count"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:background="#427CAC"
+            android:background="@color/sapUiBaseColor"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     </android.support.design.widget.AppBarLayout>
@@ -78,7 +79,9 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="2.3"
-                        android:text="Empty" />
+                        android:text="Empty"
+                        android:textColor="#333333"
+                        android:thumbTint="@color/sapUiBaseColor" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -128,6 +131,7 @@
                     style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:progressTint="@color/Indicator"
                     android:max="100"
                     android:paddingTop="5dp" />
 
