--- a/main/res/layout/activity_search.xml
+++ b/main/res/layout/activity_search.xml
@@ -13,11 +13,12 @@
             <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
-                    android:background="#427CAC"
+                    android:background="@color/sapUiBaseColor"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
             </android.support.design.widget.AppBarLayout>
@@ -33,27 +34,29 @@
                         android:layout_width="match_parent"
                         android:layout_marginTop="10dp"
                         android:layout_height="match_parent">
+
                         <android.support.design.widget.TextInputLayout
-                            android:paddingLeft="20dp"
-                            android:paddingRight="20dp"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="@dimen/list_height"
+                            android:paddingLeft="@dimen/list_left_padding"
+                            android:paddingRight="@dimen/list_left_padding">
+
                             <EditText
                                 android:id="@+id/warehouse_number"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
                                 android:hint="Warehouse Number (Mandatory)"
                                 android:imeOptions="actionUnspecified"
                                 android:maxLines="1"
-                                android:singleLine="true"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
+                                android:singleLine="true" />
                         </android.support.design.widget.TextInputLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="65dp"
                             android:orientation="horizontal"
-                            android:paddingLeft="20dp"
-                            android:paddingRight="20dp">
+                            android:paddingLeft="@dimen/list_left_padding"
+                            android:paddingRight="@dimen/list_left_padding">
 
                             <android.support.design.widget.TextInputLayout
                                 android:layout_width="0dp"
@@ -78,69 +81,76 @@
                                 android:padding="5dp"
                                 android:src="@drawable/barcode_scanner" />
                         </LinearLayout>
+
                         <android.support.design.widget.TextInputLayout
-                            android:paddingLeft="20dp"
-                            android:paddingRight="20dp"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="@dimen/list_height"
+                            android:paddingLeft="@dimen/list_left_padding"
+                            android:paddingRight="@dimen/list_left_padding">
+
                             <EditText
                                 android:id="@+id/storage_type"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
                                 android:hint="Storage Type (Optional)"
                                 android:imeOptions="actionUnspecified"
                                 android:maxLines="1"
-                                android:singleLine="true"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
+                                android:singleLine="true" />
                         </android.support.design.widget.TextInputLayout>
+
                         <android.support.design.widget.TextInputLayout
-                            android:paddingLeft="20dp"
-                            android:paddingRight="20dp"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="@dimen/list_height"
+                            android:paddingLeft="@dimen/list_left_padding"
+                            android:paddingRight="@dimen/list_left_padding">
+
                             <EditText
                                 android:id="@+id/aisle"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
                                 android:hint="Aisle (Optional)"
                                 android:imeOptions="actionUnspecified"
                                 android:maxLines="1"
-                                android:singleLine="true"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
+                                android:singleLine="true" />
                         </android.support.design.widget.TextInputLayout>
+
                         <LinearLayout
-                            android:paddingTop="20dp"
-                            android:paddingLeft="20dp"
-                            android:paddingRight="20dp"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="@dimen/list_height"
+                            android:paddingLeft="@dimen/list_left_padding"
+                            android:paddingRight="@dimen/list_left_padding">
 
                             <Switch
                                 android:id="@+id/guided_mode"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:paddingBottom="12dp"
-                                android:paddingLeft="5dp"
-                                android:paddingRight="16dp"
-                                android:paddingTop="12dp"
-                                android:switchTextAppearance="@style/TextAppearance.AppCompat"
+                                android:layout_gravity="center"
+                                android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                                 android:text="Guided Mode"
-                                android:textColorLink="#427CAC"
-                                android:textStyle="normal" />
+                                android:thumbTint="@color/sapUiBaseColor"
+                                android:textColor="#333333"
+                                android:textStyle="normal"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <Button
+                                android:layout_marginLeft="@dimen/button_margin_horizontal"
+                                android:layout_marginRight="@dimen/button_margin_horizontal"
+                                android:layout_marginTop="@dimen/button_margin_horizontal"
+                                android:id="@+id/search_pi"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/logon_btn"
+                                android:text="Search"
+                                android:textAllCaps="false"
+                                android:textColor="@color/white"
+                                android:textColorHighlight="@color/white"
+                                android:textSize="18sp" />
                         </LinearLayout>
                     </LinearLayout>
-                <Button
-                    android:textAllCaps="false"
-                    android:id="@+id/search_pi"
-                    android:textColorHighlight="@color/white"
-                    android:textColor="@color/white"
-                    android:background="@drawable/logon_btn"
-                    android:layout_marginLeft="@dimen/button_margin_horizontal"
-                    android:layout_marginRight="@dimen/button_margin_horizontal"
-                    android:layout_marginBottom="70dp"
-                    android:text="Search"
-                    android:textSize="18sp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+
             </RelativeLayout>
         </android.support.design.widget.CoordinatorLayout>
         <android.support.design.widget.NavigationView
