--- a/main/res/layout/pidoclist_item.xml
+++ b/main/res/layout/pidoclist_item.xml
@@ -1,37 +1,36 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:padding="10dp"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="72dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="wrap_content"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            />
+            android:layout_gravity="left|center_vertical"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/stringName"
             android:layout_width="wrap_content"
-            android:layout_weight="8"
-            android:textSize="30sp"
-            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:textColor="@color/grey"
+            android:layout_gravity="left|center_vertical"
+            android:layout_weight="8"
+            android:gravity="left|center_vertical"
             android:textAllCaps="false"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/grey"
+            android:textSize="30sp" />
 
         <ImageView
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/uom_next"
             android:layout_gravity="center"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:src="@drawable/uom_next" />
 
     </LinearLayout>
 
