--- a/main/res/values/dimens.xml
+++ b/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="button_text_size">18sp</dimen>
     <dimen name="list_view_text_size">35sp</dimen>
     <dimen name="button_margin_horizontal">20dp</dimen>
+    <dimen name="list_left_padding">16dp</dimen>
+    <dimen name="list_height">72dp</dimen>
 </resources>
